--- a/BESHOP/Base.lproj/Main.storyboard
+++ b/BESHOP/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="kGJ-zH-HzK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2eu-Gt-dTO">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -36,8 +36,6 @@
                     <connections>
                         <outlet property="ScrollView" destination="dSk-Ug-55u" id="Tkw-lp-5a4"/>
                         <outlet property="backgroundView" destination="qIs-dB-l11" id="9OU-dh-j4N"/>
-                        <outlet property="pageControl" destination="tCb-Ir-c0n" id="bJE-yS-fa0"/>
-                        <outlet property="pageControll" destination="tCb-Ir-c0n" id="jmy-cw-f27"/>
                         <outlet property="scrollView" destination="dSk-Ug-55u" id="frt-nH-Rew"/>
                     </connections>
                 </viewController>
@@ -483,7 +481,7 @@
                                         <rect key="frame" x="0.0" y="22" width="385" height="132"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aIe-wy-SgS" id="Tmd-Vd-Q1m">
-                                            <rect key="frame" x="0.0" y="0.0" width="385" height="131.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="385" height="131"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -539,7 +537,7 @@
                                         <rect key="frame" x="0.0" y="22" width="375" height="260"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zaD-Du-4Vh" id="RH2-wC-2bW">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="259.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="259"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
