--- a/BESHOP/Base.lproj/Main.storyboard
+++ b/BESHOP/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="kGJ-zH-HzK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2eu-Gt-dTO">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -325,7 +325,7 @@
         <!--Edit Info-->
         <scene sceneID="x89-ZD-UcA">
             <objects>
-                <viewController id="kGJ-zH-HzK" customClass="EditInfoViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Edit" id="kGJ-zH-HzK" customClass="EditInfoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qwt-uo-xIe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -354,7 +354,7 @@
                                 </state>
                                 <connections>
                                     <action selector="pushSendButton:" destination="kGJ-zH-HzK" eventType="touchUpInside" id="757-2n-WPq"/>
-                                    <segue destination="HA1-gZ-cWZ" kind="push" id="lS4-I5-WVn"/>
+                                    <segue destination="HA1-gZ-cWZ" kind="modal" modalTransitionStyle="crossDissolve" id="grf-Jd-Hik"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" id="uID-nz-aJ9">
@@ -474,16 +474,16 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="132" sectionHeaderHeight="22" sectionFooterHeight="22" id="BL1-VY-64i">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" sectionHeaderHeight="22" sectionFooterHeight="22" id="BL1-VY-64i">
                                 <rect key="frame" x="0.0" y="134" width="385" height="533"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="132" id="aIe-wy-SgS" customClass="MyItemTableViewCell">
-                                        <rect key="frame" x="0.0" y="22" width="385" height="132"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="aIe-wy-SgS" customClass="MyItemTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="385" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aIe-wy-SgS" id="Tmd-Vd-Q1m">
-                                            <rect key="frame" x="0.0" y="0.0" width="385" height="131.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="385" height="149.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -494,16 +494,36 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥ 1,000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hlu-ca-Njs">
-                                <rect key="frame" x="67" y="89" width="241" height="21"/>
+                                <rect key="frame" x="141" y="95" width="149" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="総売上" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GKc-Pz-3S8">
-                                <rect key="frame" x="75" y="86" width="51" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Vkj-Bo-pxx">
+                                <rect key="frame" x="17" y="24" width="40" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="HiraKakuProN-W3" family="Hiragino Kaku Gothic ProN" pointSize="15"/>
+                                <state key="normal" backgroundImage="WhiteAdd.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pushAddButon:" destination="HA1-gZ-cWZ" eventType="touchUpInside" id="IrG-T0-yqq"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9ON-JY-Fis">
+                                <rect key="frame" x="318" y="24" width="40" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pushFlipButton:" destination="HA1-gZ-cWZ" eventType="touchUpInside" id="A8h-uY-A8r"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="総売上" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GKc-Pz-3S8">
+                                <rect key="frame" x="91" y="95" width="79" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HiraKakuProN-W3" family="Hiragino Kaku Gothic ProN" pointSize="24"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -511,7 +531,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="MyItemList" id="xUa-0p-L3B">
-                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="PZv-AF-skw"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="PZv-AF-skw">
+                            <connections>
+                                <action selector="pushAddButon:" destination="HA1-gZ-cWZ" id="eyM-Vo-Hd8"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
@@ -554,12 +578,12 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="New" id="Oh1-o7-XDP">
-                                        <barButtonItem key="leftBarButtonItem" title="Item" id="3t0-c2-8AJ">
+                                        <barButtonItem key="leftBarButtonItem" image="Yoko1.png" id="3t0-c2-8AJ">
                                             <connections>
                                                 <action selector="pushLeftBarButton:" destination="C7w-EQ-UbG" id="X71-nz-VKd"/>
                                             </connections>
                                         </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Item" id="0KQ-0C-VHG">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="0KQ-0C-VHG">
                                             <connections>
                                                 <action selector="pushFlipButton:" destination="C7w-EQ-UbG" id="sBi-0s-mKt"/>
                                             </connections>
@@ -609,6 +633,8 @@
         <image name="AddImage.png" width="260" height="260"/>
         <image name="Send.png" width="525" height="92"/>
         <image name="Shikaku.png" width="133" height="133"/>
+        <image name="WhiteAdd.png" width="98" height="98"/>
+        <image name="Yoko1.png" width="30" height="30"/>
         <image name="add_items_bg.png" width="750" height="1334"/>
         <image name="add_picture.png" width="205" height="205"/>
         <image name="golden_gate_bridge.jpg" width="719" height="1280"/>
