--- a/BESHOP/MyItemTableViewCell.xib
+++ b/BESHOP/MyItemTableViewCell.xib
@@ -6,40 +6,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="3" id="KGk-i7-Jjw" customClass="MyItemTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="365" height="105"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="48" id="KGk-i7-Jjw" customClass="MyItemTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="365" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="365" height="104"/>
+                <rect key="frame" x="0.0" y="0.0" width="365" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Shikaku.png" id="ac2-hr-m0F">
+                        <rect key="frame" x="0.0" y="18" width="413" height="110"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NIKON D3200" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9Qu-jq-adL">
-                        <rect key="frame" x="127" y="8" width="190" height="21"/>
+                        <rect key="frame" x="127" y="29" width="190" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="HiraKakuProN-W3" family="Hiragino Kaku Gothic ProN" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥ 78924" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DZZ-H7-vqC">
-                        <rect key="frame" x="127" y="41" width="132" height="21"/>
+                        <rect key="frame" x="127" y="62" width="132" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="HiraKakuProN-W3" family="Hiragino Kaku Gothic ProN" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="● borrower" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LB5-mB-BZK">
-                        <rect key="frame" x="273" y="75" width="92" height="21"/>
+                        <rect key="frame" x="273" y="96" width="92" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.png" id="bI2-MK-uLr">
-                        <rect key="frame" x="0.0" y="0.0" width="104" height="104"/>
+                        <rect key="frame" x="0.0" y="21" width="104" height="104"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="借りられた回数" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ejl-JA-5od">
-                        <rect key="frame" x="122" y="75" width="105" height="21"/>
+                        <rect key="frame" x="122" y="96" width="105" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="HiraKakuProN-W3" family="Hiragino Kaku Gothic ProN" pointSize="11"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -55,10 +59,11 @@
                 <outlet property="Thumbnail" destination="bI2-MK-uLr" id="GlW-Zm-oRl"/>
                 <outlet property="itemContent" destination="H2p-sc-9uM" id="QEm-aL-N6v"/>
             </connections>
-            <point key="canvasLocation" x="311.5" y="431.5"/>
+            <point key="canvasLocation" x="311.5" y="409"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="Shikaku.png" width="133" height="133"/>
         <image name="camera.png" width="196" height="195"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
